# Eigenstate

./: .env.example  .gitignore  Dockerfile  PITCH_DEMO_SCRIPT_5MIN.md  README.md  eigenstate_app  eigenstate_cover_animation.html  go.mod  go.sum  main_app.py  start.sh
cmd/eigenstate/: main.go
eigenstate-frontend----template/: .env.example  index.html  package-lock.json  package.json  vite.config.js
eigenstate-frontend----template/src/: App.jsx  index.css
eigenstate-frontend----template/src/api/: client.js
eigenstate-frontend----template/src/components/: AnalyserSidebar.jsx  CoverPage.jsx  FileTree.jsx  Sidebar.jsx  Timeline.jsx  WhyPanel.jsx
eigenstate-frontend----template/src/data/: demoSeed.js
eigenstate-frontend----template/src/lib/: analyserLineage.js  analyserPersist.js  analyserSessionBridge.js
eigenstate-frontend----template/src/pages/: Dashboard.jsx  Pricing.jsx  (+5 more)
intel/: Cargo.toml
intel/src/: main.rs
internal/api/: auth.go  metrics.go  server.go
internal/db/: db.go  migrations.go  normalized.go  repo_reset.go  schema.sql  timeline.go
internal/ingestion/: circuit_breaker.go  commit_ingest.go  config.go  diffparse.go  heuristic.go  ingest.go  normalizer.go  per_function.go  webhook.go  worker.go
internal/intelligence/: client.go
pkg/models/: models.go
python/: api.py  ast_extractor.py  confidence_scorer.py  config.py  database.py  diff_mapper.py  llm_client.py  llm_prompts.py  pattern_detector.py  pr_desc.py  reasoning_engine.py  requirements.txt  signal_processor.py  staleness_checker.py
scripts/: seed.go  seed.py  wipe_workspace.sql
