[package]
name = "eigenstate-intel"
version = "0.1.0"
edition = "2021"
description = "Eigenstate Intelligence Layer - AST analysis and decision reconstruction"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
clap = { version = "4", features = ["derive"] }
